# ruin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: tests.yml
src/: allocator.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  vga.rs
src/acpi/: acpi.rs
src/allocator/: linked_list.rs
src/storage/: ata_pio.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: heap_allocation.rs  main.rs  should_panic.rs  stack_overflow.rs
